# slop

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cabal.project  seedl.cabal  slop.cabal
.cabal/: config
assets/Inter/: README.txt
exe/: Main.hs
lib/: Seedl.hs  Slop.hs
lib/Seedl/: Pipeline.hs
lib/Seedl/Pipeline/: Graph.hs
lib/Seedl/SDL/: Raw.hs
lib/Slop/: Audio.hs  Draw2D.hs  GPU.hs  Input.hs  Internal.hs  Math.hs  Pipeline.hs  Resource.hs  Window.hs
lib/Slop/Internal/: DList.hs
lib/Slop/Pipeline/: Graph.hs
lib/Slop/SDL/: Raw.hs
lib/Slop/Storable/: Generic.hs
test/: Main.hs  abi.c
tools/: spirv-gen.hs
