cabal-version:      3.14
name:               seedl
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Seedl
                      Seedl.SDL.Raw
                      Seedl.Pipeline
                      Seedl.Pipeline.Graph
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        mtl,
        stm
    pkgconfig-depends:
        sdl3 >= 3.4,
        sdl3-image,
        sdl3-mixer,
        sdl3-ttf
    hs-source-dirs:   lib
    default-language: GHC2024

executable seedl
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        seedl,
        bytestring,
        spirdo
    pkgconfig-depends:
        sdl3-mixer

    hs-source-dirs:   exe
    default-language: GHC2024
