cabal-version:      3.14
name:               slop
version:            0.1.0.0
synopsis:           SDL3-based rendering + audio toolkit for Haskell
description:
    Slop is a small SDL3.4-based rendering and audio wrapper for Haskell, with
    a focus on textures, sprites, ergonomic render pipelines, and async asset
    loading.
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
category:           Graphics, Audio
build-type:         Simple
homepage:           https://github.com/mewhhaha/slop
bug-reports:        https://github.com/mewhhaha/slop/issues
tested-with:        GHC ==9.12.2
extra-doc-files:    README.md, CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/mewhhaha/slop.git

common warnings
    ghc-options: -Wall

flag demo
    description: Build the demo executable (depends on spirdo).
    default: False
    manual: True

library
    import:           warnings
    exposed-modules:  Slop
                      Slop.Window
                      Slop.Input
                      Slop.Draw2D
                      Slop.Resource
                      Slop.GPU
                      Slop.Audio
                      Slop.Math
                      Slop.SDL.Raw
                      Slop.Pipeline
                      Slop.Pipeline.Graph
                      Slop.Storable.Generic
    other-modules:    Slop.Internal
                      Slop.Internal.DList
    -- other-extensions:
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        directory,
        mtl,
        stm,
        text,
        time
    pkgconfig-depends:
        sdl3 >= 3.4,
        sdl3-image,
        sdl3-mixer,
        sdl3-ttf
    hs-source-dirs:   lib
    default-language: GHC2024

executable slop
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    if !flag(demo)
        buildable: False
    build-depends:
        base ^>=4.21.0.0,
        bytestring,
        containers,
        slop,
        spirdo,
        template-haskell,
        text
    pkgconfig-depends:
        sdl3-mixer

    hs-source-dirs:   exe
    default-language: GHC2024

test-suite slop-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        slop,
        text
    hs-source-dirs:   test
    default-language: GHC2024
