cabal-version:      3.14
name:               slop
version:            0.1.0.0
synopsis:           SDL3-based rendering + audio toolkit for Haskell
description:
    Slop is a small SDL3.4-based rendering and audio wrapper for Haskell, with
    a focus on textures, sprites, ergonomic render pipelines, and async asset
    loading.
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
category:           Graphics, Audio
build-type:         Simple
homepage:           https://github.com/mewhhaha/slop
bug-reports:        https://github.com/mewhhaha/slop/issues
tested-with:        GHC ==9.12.2, GHC ==9.14.1
extra-doc-files:    README.md, CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/mewhhaha/slop.git

common warnings
    ghc-options: -Wall

flag demo
    description: Build the demo and shader generator (depends on spirdo).
    default: False
    manual: True

library
    import:           warnings
    exposed-modules:  Slop
                      Slop.Window
                      Slop.Input
                      Slop.Draw2D
                      Slop.Resource
                      Slop.GPU
                      Slop.Audio
                      Slop.Math
                      Slop.SDL.Raw
                      Slop.Pipeline
                      Slop.Pipeline.Graph
                      Slop.Storable.Generic
    other-modules:    Slop.Internal
                      Slop.Internal.DList
    build-depends:
        base ^>=4.21.0.0 || ^>=4.22.0.0,
        bytestring <0.13,
        containers <0.9,
        directory <1.4,
        mtl <2.4,
        stm <2.6,
        text <2.2,
        time <1.16
    pkgconfig-depends:
        sdl3 >= 3.4,
        sdl3-image,
        sdl3-mixer,
        sdl3-ttf
    hs-source-dirs:   lib
    default-language: GHC2024

executable slop
    import:           warnings
    main-is:          Main.hs
    if !flag(demo)
        buildable: False
    build-depends:
        base ^>=4.21.0.0 || ^>=4.22.0.0,
        slop,
        spirdo ^>=0.2.0.0,
        text <2.2
    pkgconfig-depends:
        sdl3-mixer

    hs-source-dirs:   exe
    default-language: GHC2024

executable slop-spirv-gen
    import:           warnings
    main-is:          spirv-gen.hs
    if !flag(demo)
        buildable: False
    build-depends:
        base ^>=4.21.0.0 || ^>=4.22.0.0,
        bytestring <0.13,
        spirdo ^>=0.2.0.0
    hs-source-dirs:   tools
    default-language: GHC2024

test-suite slop-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    c-sources:        test/abi.c
    build-depends:
        base ^>=4.21.0.0 || ^>=4.22.0.0,
        slop,
        text <2.2
    pkgconfig-depends:
        sdl3 >= 3.4,
        sdl3-ttf
    hs-source-dirs:   test
    default-language: GHC2024
